# startup-finance-metrics

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml  server.json  smithery.yaml
evals/: evals.json
references/: coaching_templates.md  validation_rules.md  worked_example.md
scripts/: compute_metrics.py  render_report.py
skills/: SKILL.md
src/startup_finance_mcp/: compute_metrics.py  render_report.py  server.py
test/: three_month_bank.csv  three_month_customers.csv
