[project]
name = "startup-finance-mcp"
version = "1.1.1"
description = "An MCP server for analyzing startup financial health and generating metrics reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
]

[project.scripts]
startup-finance-mcp = "startup_finance_mcp:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/startup_finance_mcp"]
